feat: app initialize screen
